<resources>
    <string name="app_name">Menuscript</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menuscript">MENUSCRIPT</string>
    <string name="view_ingredients">View Ingredients</string>
    <string name="view_recipes">View Recipes</string>
    <string name="view_meal_plan">View Meal Plan</string>
    <string name="view_shopping_list">View Shopping List</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="menuscript_logo_description">Menuscript Logo</string>
    <string name="sort_button_description">Sort Button</string>

    <string name="list_text_amount">Count</string>
    <string name="list_text_category">Category</string>
    <string name="list_text_description">Description</string>
<<<<<<< HEAD
    <string name="recipes">RECIPES</string>

    <string-array name="shopListSort">
        <item>Description</item>
        <item>Category</item>
    </string-array>

=======
    <string name="add">Add</string>
>>>>>>> 95a401c436d609dd5c675a60f25a091f76fe8301
</resources>