<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menuscript_logo"
        android:contentDescription="@string/menuscript_logo_description" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="@id/app_name"
        app:layout_constraintStart_toStartOf="@id/app_name"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MainHeader"
        android:text="@string/menuscript"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/menu_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name">

        <Button
            android:id="@+id/ingredient_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_button"
            app:backgroundTint="@color/black"
            style="@style/MainBody"
            android:paddingVertical="0dp"
            android:text="@string/view_ingredients" />

        <Button
            android:id="@+id/recipe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="0dp"
            android:text="@string/view_recipes"
            style="@style/MainBody"
            android:background="@drawable/bordered_button"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/meal_plan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MainBody"
            android:paddingVertical="0dp"
            android:text="@string/view_meal_plan"
            android:background="@drawable/bordered_button"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/shopping_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MainBody"
            android:paddingVertical="0dp"
            android:text="@string/view_shopping_list"
            android:background="@drawable/bordered_button"
            app:backgroundTint="@color/black" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>