<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sort_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintBottom_toTopOf="@id/header_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/list_frame"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <LinearLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toTopOf="@id/list_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/description_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="2"
            android:ellipsize="marquee"
            android:fontFamily="@font/open_sans"
            android:maxLength="30"
            android:singleLine="true"
            android:text="@string/list_text_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <View-->
        <!--            android:layout_width="1dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginEnd="3dp"-->
        <!--            android:paddingTop="-7dp"-->
        <!--            android:paddingBottom="-7dp"-->
        <!--            android:background="@android:color/black" />-->

        <TextView
            android:id="@+id/category_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:singleLine="true"
            android:text="@string/list_text_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description_header"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:text="@string/list_text_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cost_text"
            app:layout_constraintStart_toEndOf="@+id/category_header"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>


    <FrameLayout
        android:id="@+id/list_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rectangle_test"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_bar">

        <ListView
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:divider="@color/black"
            android:dividerHeight="1dp"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>